Modernize and resolve a few warnings